[package]
name = "bump-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.soroban-env-host]
version = "20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"
rev = "8c63bff68a15d79aca3a705ee6916a68db57b7e6"

[dependencies.stellar-xdr]
version = "20.0.0-rc1"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "d5ce0c9e7aa83461773a6e81662067f35d39e4c1"

[dependencies]
soroban-cli= { git = "https://github.com/stellar/soroban-tools/", version="20.0.0-rc2"}
stellar-strkey = "0.0.7"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = "4.3.10"
ed25519-dalek = "2.0.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
reqwest = {version="0.11.18", features=["json"]}
